# armadillo

./: README.md  pyproject.toml  setup.py
armadillo/: README.md  __init__.py  license.txt
armadillo/data_describe/: __init__.py  data_describe.py
armadillo/data_explore/: __init__.py  ditribution_plot.py
armadillo/data_wrangle/: __init__.py  data_filter.py
armadillo/julia/: Julia.py  __init__.py  asisst.py
