[project]
name="armadillo"
version="1.1.1"
authors=[
    {name="Thomas Young", email="thomasyounger02@gmail.com"},
]
description="Tools for Business Analysis"
readme = "README.md"
requires-python = ">=3.8"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage="https://github.com/ThomasYounger02/armadillo"
Issues="https://github.com/ThomasYounger02/armadillo/issues"